<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /*
  ~  * 27/7/2019.
  ~  * @Author Vinicius Mesquita
  ~  */
  -->

<RelativeLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".InformationContactActivity">

    <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                app:title="@string/information_title"
                app:titleTextColor="@color/white"
                android:background="@color/design_default_color_primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
            android:id="@+id/txt_name"
            android:text="@string/app_name"
            android:textSize="25dp"
            android:layout_marginTop="100dp"
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    <TextView
            android:id="@+id/txt_account"
            android:text="@string/app_name"
            android:textSize="25dp"
            android:layout_alignTop="@id/txt_name"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    <TextView
            android:id="@+id/txt_bank_name"
            android:text="@string/app_name"
            android:textSize="25dp"
            android:layout_alignTop="@id/txt_account"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <EditText
            android:id="@+id/edit_currency"
            android:focusedByDefault="false"
            android:inputType="number"
            android:maxLines="1"
            android:layout_alignTop="@id/txt_bank_name"
            android:layout_marginTop="100dp"
            android:textAlignment="center"
            android:textSize="40dp"
            android:hint="@string/money_hint"
            android:layout_marginLeft="50dp"
            android:layout_width="300dp"
            android:layout_height="100dp"/>

    <Button
            android:id="@+id/btn_transfer"
            android:layout_centerHorizontal="true"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/edit_currency"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@drawable/rounded_button"
            android:text="@string/transfer"
            android:layout_marginTop="120dp"/>

    <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_alignTop="@id/btn_transfer"
            android:layout_marginTop="100dp"
            android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/radioBtn_current"
                android:layout_width="wrap_content"
                android:text="@string/current"
                android:textSize="15dp"
                android:layout_height="wrap_content"/>
        <androidx.appcompat.widget.AppCompatRadioButton
                android:layout_width="wrap_content"
                android:text="@string/savings"
                android:textSize="15dp"
                android:layout_height="wrap_content"/>

    </RadioGroup>

    <TextView
            android:id="@+id/txt_current_balance"
            android:layout_alignTop="@id/btn_transfer"
            android:text="test"
            android:layout_marginLeft="100dp"
            android:textColor="@color/colorAccent"
            android:textSize="15dp"
            android:layout_marginTop="105dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <TextView
            android:id="@+id/txt_saving_balance"
            android:layout_alignTop="@id/txt_current_balance"
            android:text="test"
            android:layout_marginLeft="110dp"
            android:textColor="@color/colorAccent"
            android:textSize="15dp"
            android:layout_marginTop="33dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

</RelativeLayout>